refactor: fetch role and group names when editing, use id from response to add entities
