# src/components/pages/Groups/GroupPanel/types.ts
@@ -1,3 +1,4 @@
+import type { GroupDetail } from "api/api.schemas";
 import type { Entitlement } from "components/EntitlementsPanelForm";
 import type { Props as SubFormPanelProps } from "components/SubFormPanel";
 import type { SetPanelWidth } from "hooks/usePanel";
@@ -16,9 +17,11 @@ export type Props = {
   existingEntitlements?: string[];
   existingIdentities?: string[];
   existingRoles?: string[];
+  isEditing?: boolean;
   isFetchingExistingEntitlements?: boolean;
   isFetchingExistingIdentities?: boolean;
   isFetchingExistingRoles?: boolean;
+  isFetchingGroup?: boolean;
   isSaving?: boolean;
   onSubmit: (
     values: FormFields,
@@ -29,7 +32,7 @@ export type Props = {
     removeIdentities?: string[],
     removeRoles?: string[],
   ) => Promise<void>;
-  groupId?: string | null;
+  group?: GroupDetail | null;
   setPanelWidth: SetPanelWidth;
 };
 
