# src/components/pages/Roles/RolePanel/types.ts
@@ -1,3 +1,4 @@
+import type { RoleDetail } from "api/api.schemas";
 import type { Entitlement } from "components/EntitlementsPanelForm";
 import type { Props as SubFormPanelProps } from "components/SubFormPanel";
 import type { SetPanelWidth } from "hooks/usePanel";
@@ -14,14 +15,16 @@ export type Props = {
   close: SubFormPanelProps<FormFields>["close"];
   error?: SubFormPanelProps<FormFields>["error"];
   existingEntitlements?: string[];
+  isEditing?: boolean;
   isFetchingExisting?: boolean;
+  isFetchingRole?: boolean;
   isSaving?: boolean;
   onSubmit: (
     values: FormFields,
     addEntitlements: Entitlement[],
     removeEntitlements?: Entitlement[],
   ) => Promise<void>;
-  roleId?: string | null;
+  role?: RoleDetail | null;
   setPanelWidth: SetPanelWidth;
 };
 
